# dc-qiskit-stochastics

./: .gitignore  Pipfile  README.md  asian_option_state_machine.ipynb  fiddle_around.ipynb  pyproject.toml
dc_qiskit_stochastics/: __init__.py  benchmark.py  dft.py  discrete_stochastic_process.py  dsp_common.py  dsp_correlated_walk.py  dsp_independent.py  dsp_state_machine.py  dsp_util.py  epsilon_machine.py  error_mitigation.py  fractional_bownian_motion.py  hmm.py  plotting.py
dc_qiskit_stochastics/qiskit_util/: __init__.py  qiskit_provider.py
dc_qiskit_stochastics/simulation/: __init__.py  asian_option.py  lognormal.py
examples/correlated random walks/: correlated_random_walk-qc-end-statistics.py  correlated_random_walk-qc-end.py  correlated_random_walk-qc-start.py  crw_common.py  crw_delta_mc-simulation_fourier.py  crw_plot.py  gBm_delta_data.py
examples/correlated random walks/data/: crw-4-fourier-qc-ibmq_ourense-P=100-L=100-v002-shots=32768.csv  crw-4-fourier-qc-ibmqx2-P=100-L=100-v004-shots=32768.csv
examples/gBm Delta calculation/: Readme.md  gBm_delta_data.py  gBm_delta_donsker_mc-simulation_fourier.py  gBm_delta_donsker_qc-simulation_fourier.py  gBm_delta_donsker_qc-simulation_fourier_detail_analysis.py  gBm_delta_donsker_qc-simulation_fourier_rest_done.py  gBm_delta_donsker_qc-simulation_fourier_rest_run.py  gBm_delta_donsker_qc-simulation_fourier_rest_start.py  gBm_delta_donsker_theory_fourier.py  gBm_delta_plot-details.py  gBm_delta_plot.py  gBm_delta_theory_fourier.py
examples/gBm Delta calculation/data/: gBm-delta-donsker-4-fourier-qc-details-ibmqx2-P=100-L=100-K=110.0.csv  gBm-delta-donsker-4-fourier-qc-ibmqx2-P=100-L=100.csv  gBm-delta-theory-fourier-P=100-L=100-n=4.csv  gBm-delta-theory-fourier-P=10000-L=10000-n=10.csv
src/dc_qiskit_stochastics/: __init__.py  benchmark.py  discrete_stochastic_process.py  dsp_common.py  dsp_correlated_walk.py  dsp_independent.py  dsp_state_machine.py  dsp_util.py  epsilon_machine.py  error_mitigation.py  fractional_bownian_motion.py  hmm.py  plotting.py
src/dc_qiskit_stochastics/qiskit/: __init__.py  qiskit_provider.py
src/dc_qiskit_stochastics/simulation/: asian_option.py  lognormal.py
tests/: dsp_data.py  test_circuit_building.py  test_correlated_walks.py  test_dsp_state_machine.py  test_execution.py  test_fractional_bownian_motion.py  test_lognormal.py
tests/dc_qc_random_walks/: dsp_data.py  test_circuit_building.py  test_correlated_walks.py  test_execution.py  test_fractional_bownian_motion.py
tests/dc_qiskit_stochastics/: dsp_data.py  test_circuit_building.py  test_correlated_walks.py  test_dsp_state_machine.py  test_execution.py  test_fractional_bownian_motion.py  test_lognormal.py
