# Copyright 2018-2022 Carsten Blank
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[tool.poetry]
name = "dc-qiskit-stochastics"
version = "0.0.1"
description = ""
authors = ["Carsten BLank <blank@data-cybernetics.com>"]
# New attributes
license = "Apache Software License"
readme = "README.md"
homepage = "https://github.com/carstenblank/dc-qiskit-stochastics"
repository = "https://github.com/carstenblank/dc-qiskit-stochastics"
keywords = ["quantum", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
    "Topic :: Scientific/Engineering :: Physics"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
fbm = "*"
retry = "*"
dc-qiskit-algorithms = "*"
dc-quantum-scheduling = "*"
hmmlearn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
matplotlib = "*"
pandas = "*"